sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: '(' expected but identifier found.
  while trie==false{
        ^AlgBubbleSort1:20: error: illegal start of simple expression
} 
^